blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # numbers of pods
  selector:
    matchLabels:
      app: client # app is just a custom label
  template:
    metadata:
      labels:
        app: client # set a label
    spec:
      containers:
        - name: client
          image: azouxyj/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP # ClusterIP is default service
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
