blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # numbers of pods
  selector:
    matchLabels:
      app: moderation # app is just a custom label
  template:
    metadata:
      labels:
        app: moderation # set a label
    spec:
      containers:
        - name: moderation
          image: azouxyj/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP # ClusterIP is default service
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
