blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # numbers of pods
  selector:
    matchLabels:
      app: query # app is just a custom label
  template:
    metadata:
      labels:
        app: query # set a label
    spec:
      containers:
        - name: query
          image: azouxyj/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP # ClusterIP is default service
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
